log
Thu Mar 26 07:20:26 PM UTC 2026: 
 list.c | 82 +++++++++++++-----------------------------------------------------
 1 file changed, 16 insertions(+), 66 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:92:31: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   92 |     if(list->current == NULL) return;
      |                               ^~~~~~
list.c:91:8: note: declared here
   91 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
list.c:93:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   93 |     Nodo* aux = list->current;
      |     ^~~~
      |     Node
list.c:93:17: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   93 |     Nodo* aux = list->current;
      |                 ^~~~
list.c:94:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   94 |     Nodo* izq = aux->prev;
      |     ^~~~
      |     Node
list.c:94:20: error: request for member ‘prev’ in something not a structure or union
   94 |     Nodo* izq = aux->prev;
      |                    ^~
list.c:95:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   95 |     Nodo* der = aux->next;
      |     ^~~~
      |     Node
list.c:95:20: error: request for member ‘next’ in something not a structure or union
   95 |     Nodo* der = aux->next;
      |                    ^~
list.c:98:12: error: request for member ‘next’ in something not a structure or union
   98 |         izq->next = der;
      |            ^~
list.c:101:12: error: request for member ‘prev’ in something not a structure or union
  101 |         der->prev = izq;
      |            ^~
list.c:104:19: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  104 |     list->current = der;
      |                   ^
list.c:106:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
  106 |     list->size--;
      |         ^~
8c59c13
Thu Mar 26 07:21:12 PM UTC 2026: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:92:31: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   92 |     if(list->current == NULL) return;
      |                               ^~~~~~
list.c:91:8: note: declared here
   91 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
b1d61e1
Thu Mar 26 07:22:05 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:106:1: error: control reaches end of non-void function [-Werror=return-type]
  106 | }
      | ^
cc1: all warnings being treated as errors
0e84d0c
Thu Mar 26 07:34:14 PM UTC 2026: 
 list.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 0/60
5d90b25
Thu Mar 26 07:40:07 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/60
1bfac18
Thu Mar 26 07:51:20 PM UTC 2026: 
 list.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
 tests:  1|5
total_score: 10/60
57f0092
Sun Mar 29 04:36:13 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:118:12: error: ‘data’ undeclared (first use in this function); did you mean ‘dato’?
  118 |     return data; //retornamos el dato del current eliminado
      |            ^~~~
      |            dato
list.c:118:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:97:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   97 |     void* dato = aux->data; // guardamos el dato para despues mostrarlo
      |           ^~~~
list.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
  119 | }
      | ^
cc1: all warnings being treated as errors
1646f54
Sun Mar 29 04:37:00 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
3979d12
Sun Mar 29 04:47:07 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
e3d2d1d
Sun Mar 29 04:59:23 AM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:9: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   48 |     if (lista == NULL || lista->head == NULL) return NULL;
      |         ^~~~~
      |         list
list.c:48:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
da39892
Sun Mar 29 04:59:40 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
44f03da
Sun Mar 29 05:07:02 AM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
3a84a02
Sun Mar 29 05:07:24 AM UTC 2026: 
 tests:  0|0
28d578f
Sun Mar 29 05:08:31 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7498d59
Sun Mar 29 05:09:51 AM UTC 2026: 
 tests:  0|0
7bef7b9
Sun Mar 29 05:10:28 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
7758abf
Sun Mar 29 05:24:13 AM UTC 2026: 
 list.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:76:24: error: too few arguments to function ‘createNode’
   76 |     Node * nuevoNodo = createNode();
      |                        ^~~~~~~~~~
list.c:22:8: note: declared here
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
list.c: In function ‘pushBack’:
list.c:92:22: error: ‘a’ undeclared (first use in this function)
   92 |     lista->current = a->tail;
      |                      ^
list.c:92:22: note: each undeclared identifier is reported only once for each function it appears in
88787f7
Sun Mar 29 05:26:38 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:92:22: error: ‘a’ undeclared (first use in this function)
   92 |     lista->current = a->tail;
      |                      ^
list.c:92:22: note: each undeclared identifier is reported only once for each function it appears in
ba7321e
